--- a/package.json
+++ b/package.json
@@ -13,17 +13,25 @@
     "dev:server": "npm --workspace server run dev",
     "build": "npm --workspace server run build && npm --workspace client run build",
     "start": "npm --workspace server run start",
-    "lint": "eslint . --ext .ts,.tsx",
+    "lint": "eslint 'client/src/**/*.{ts,tsx,js,jsx}' 'server/src/**/*.{ts,tsx,js,jsx}'",
+    "lint:fix": "eslint 'client/src/**/*.{ts,tsx,js,jsx}' 'server/src/**/*.{ts,tsx,js,jsx}' --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Clint Jones",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.27.0",
     "@types/express": "^5.0.2",
     "@types/node": "^22.15.21",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
     "concurrently": "^9.1.2",
+    "eslint": "^9.27.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.1.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.32.1"
   }
 }
