Initial cypress config

--- a/package.json
+++ b/package.json
@@ -15,18 +15,24 @@
     "start": "npm --workspace server run start",
     "lint": "eslint 'client/src/**/*.{ts,tsx,js,jsx}' 'server/src/**/*.{ts,tsx,js,jsx}'",
     "lint:fix": "eslint 'client/src/**/*.{ts,tsx,js,jsx}' 'server/src/**/*.{ts,tsx,js,jsx}' --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test:e2e": "cypress run --e2e",
+    "test:component": "cypress run --component",
+    "test:all": "npm run test:e2e && npm run test:component",
+    "test:open:e2e": "cypress open --e2e",
+    "test:open:component": "cypress open --component"
   },
   "keywords": [],
   "author": "Clint Jones",
   "license": "ISC",
   "devDependencies": {
+    "@cypress/vite-dev-server": "^6.0.3",
     "@eslint/js": "^9.27.0",
     "@types/express": "^5.0.2",
     "@types/node": "^22.15.21",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
     "concurrently": "^9.1.2",
+    "cypress": "^14.4.0",
     "eslint": "^9.27.0",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.1.0",
