More eslint cleanup

--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "client",
     "server"
   ],
+  "type": "module",
   "scripts": {
     "build": "npm --workspace server run build && npm --workspace client run build",
     "dev": "concurrently \"npm:dev:*\"",
     "dev:client": "npm --workspace client run dev",
     "dev:server": "npm --workspace server run dev",
-    "lint": "eslint 'client/src/**/*.{ts,tsx,js,jsx}' 'server/src/**/*.{ts,tsx,js,jsx}'",
-    "lint:fix": "eslint 'client/src/**/*.{ts,tsx,js,jsx}' 'server/src/**/*.{ts,tsx,js,jsx}' --fix",
-    "format": "prettier . --write",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "start": "npm --workspace server run start",
     "test:e2e": "cypress run --e2e",
     "test:component": "cypress run --component",
@@ -36,6 +36,7 @@
     "cypress": "^14.4.0",
     "eslint": "^9.27.0",
     "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.0",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.1.0",
     "prettier": "^3.5.3",
