--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.0",
     "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.1.0",
     "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
