--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "main": "dist/server.js",
   "type": "module",
   "scripts": {
-    "build": "tsc",
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "build": "tsc -b",
+    "dev": "tsx watch src/server.ts",
     "start": "node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,7 +14,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "tsx": "^4.19.4"
   },
   "dependencies": {
     "dotenv": "^16.5.0",
