--- a/server/Dockerfile.dev
+++ b/server/Dockerfile.dev
@@ -1,7 +1,7 @@
 # build image:
-#   docker build -f client/Dockerfile.dev -t 0xend-client-dev .
+#   docker build -f server/Dockerfile.dev -t 0xend-server-dev .
 # run container:
-#   docker run -it --rm -p 3000:3000 0xend-client-dev
+#   docker run -it --rm -p 3001:3001 0xend-server-dev
 
 # Use latest lightweight node release version
 FROM node:22-alpine
@@ -9,22 +9,22 @@ FROM node:22-alpine
 LABEL stage="development"
 
 # Set working directory inside the container
-# This is a monorepo, so we need client/server folders
-WORKDIR /app/client
+# This is a monorepo, so we need server/server folders
+WORKDIR /app/server
 
 #### Dependency layer
 # Copy shared config
 COPY tsconfig.json /app/tsconfig.json
-COPY client/package*.json ./
+COPY server/package*.json ./
 
 RUN npm install
 
 #### Source layer
 # NOTE: be sure to maintain .dockerignore
-COPY client/ .
+COPY server/ .
 
-# Expose the React dev server port
-EXPOSE 3000
+# Expose the express dev server port
+EXPOSE 3001
 
-# Start React app in dev mode with hot reloading
+# Start express in dev mode with hot reloading
 CMD ["npm", "run", "dev"]
