--- a/server/Dockerfile.dev
+++ b/server/Dockerfile.dev
@@ -5,7 +5,6 @@
 
 # Use latest lightweight node release version
 FROM node:22-alpine
-
 LABEL stage="development"
 
 # Set working directory inside the container
@@ -17,7 +16,7 @@ WORKDIR /app/server
 COPY tsconfig.json /app/tsconfig.json
 COPY server/package*.json ./
 
-RUN npm install
+RUN npm install --omit=prod=false
 
 #### Source layer
 # NOTE: be sure to maintain .dockerignore
