--- a/server/Dockerfile.dev
+++ b/server/Dockerfile.dev
@@ -9,21 +9,23 @@ LABEL stage="development"
 
 # Set working directory inside the container
 # This is a monorepo, so we need server/server folders
-WORKDIR /app/server
+WORKDIR /app
 
 #### Dependency layer
-# Copy shared config
-COPY tsconfig.json /app/tsconfig.json
-COPY server/package*.json ./
+# Copy shared configs (monorepo layout)
+COPY package*.json ./
+COPY tsconfig.json .
 
+COPY server/package*.json ./server/
 RUN npm install
 
 #### Source layer
 # NOTE: be sure to maintain .dockerignore
-COPY server/ .
+COPY server/ ./server
 
 # Expose the express dev server port
 EXPOSE 3001
 
 # Start express in dev mode with hot reloading
+WORKDIR /app/server
 CMD ["npm", "run", "dev"]
