--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,15 @@ services:
     volumes:
       - ./server:/app/server
       - /app/server/node_modules
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    networks:
+      - 0xend-dev
 
 networks:
   0xend-dev:
